# Python-Modules-42

./: README.md
Python_Modules_42/python_piscine_00/ex0/: ft_hello_garden.py
Python_Modules_42/python_piscine_00/ex1/: ft_plot_area.py
Python_Modules_42/python_piscine_00/ex2/: ft_harvest_total.py
Python_Modules_42/python_piscine_00/ex3/: ft_plant_age.py
Python_Modules_42/python_piscine_00/ex4/: ft_water_reminder.py
Python_Modules_42/python_piscine_00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
Python_Modules_42/python_piscine_00/ex6/: ft_garden_summary.py
Python_Modules_42/python_piscine_00/ex7/: ft_seed_inventory.py
Python_Modules_42/python_piscine_01/ex0/: ft_garden_intro.py
Python_Modules_42/python_piscine_01/ex1/: ft_garden_data.py
Python_Modules_42/python_piscine_01/ex2/: ft_plant_growth.py
Python_Modules_42/python_piscine_01/ex3/: ft_plant_factory.py
Python_Modules_42/python_piscine_01/ex4/: ft_garden_security.py
Python_Modules_42/python_piscine_01/ex5/: ft_plant_types.py
Python_Modules_42/python_piscine_01/ex6/: ft_garden_analytics.py
Python_Modules_42/python_piscine_02/ex0/: ft_first_exception.py
Python_Modules_42/python_piscine_02/ex1/: ft_different_errors.py
Python_Modules_42/python_piscine_02/ex2/: ft_custom_errors.py
Python_Modules_42/python_piscine_02/ex3/: ft_finally_block.py
Python_Modules_42/python_piscine_06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
Python_Modules_42/python_piscine_08/ex1/: operator.py  pyproject.toml  requirements.txt
(+57 files in other folders)
