[tool.poetry]
name = "operator"
version = "0.1.0"
description = "Matrix data analysis tool"
authors = ["yourname"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
pandas = "2.1.4"
requests = "2.31.0"
matplotlib = "3.8.2"
numpy = "1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
